force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States/Canada</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Indian Sub Continent</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Africa</fullName>
                <isActive>false</isActive>
                <label>Africa</label>
            </value>
            <value>
                <fullName>Canada</fullName>
                <isActive>false</isActive>
                <label>Canada</label>
            </value>
            <value>
                <fullName>Central America</fullName>
                <isActive>false</isActive>
                <label>Central America</label>
            </value>
            <value>
                <fullName>Europe</fullName>
                <isActive>false</isActive>
                <label>Europe</label>
            </value>
            <value>
                <fullName>Middle East</fullName>
                <isActive>false</isActive>
                <label>Middle East</label>
            </value>
            <value>
                <fullName>United States</fullName>
                <isActive>false</isActive>
                <label>United States</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>