force-app/main/default/objects/Account/fields/Secondary_Vertical_Market__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Vertical_Market__c</fullName>
    <label>Secondary Vertical Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction &amp; Energy</fullName>
            </value>
            <value>
                <fullName>Consumer Durables</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Intercompany</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Retail &amp; Advertisement</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>