force-app/main/default/objects/Account/fields/Secondarytype1__c.field-meta.xml
<CustomField>
    <fullName>Secondarytype1__c</fullName>
    <label>Secondary Type-1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>Co-Supplier</fullName>
            </value>
            <value>
                <fullName>Ad Agency</fullName>
            </value>
            <value>
                <fullName>Ad Specifier</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Former Direct</fullName>
            </value>
            <value>
                <fullName>Former Alliance</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>POP Producer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>