force-app/main/default/objects/Account/fields/Secondarytype3__c.field-meta.xml
<CustomField>
    <fullName>Secondarytype3__c</fullName>
    <label>Secondary Type-3-Del</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>BrandOwner</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
            <value>
                <fullName>CoSupplier</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>AdSpecifier</fullName>
            </value>
            <value>
                <fullName>Installer</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>FormerDirect</fullName>
            </value>
            <value>
                <fullName>FormerAlliance</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>POP Producer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>