force-app/main/default/objects/Account/fields/Shared_Account__c.field-meta.xml
<CustomField>
    <fullName>Shared_Account__c</fullName>
    <formula>AND(
     CUSNO__c != &quot;&quot;,
     EU_Customer_Code__c != &quot;&quot;
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared Account</label>
    <type>Checkbox</type>
</CustomField>