force-app/main/default/objects/Account/fields/SHIPNAME__c.field-meta.xml
<CustomField>
    <fullName>SHIPNAME__c</fullName>
    <label>Ship To Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>