force-app/main/default/objects/Account/fields/Tax_ID_VAT__c.field-meta.xml
<CustomField>
    <fullName>Tax_ID_VAT__c</fullName>
    <formula>IF(
 Tax_ID__c  != &quot;&quot;
,&quot;Tax ID: &quot;&amp;Tax_ID__c&amp;&apos;&apos;,&quot;&quot;)+

IF(
AND(
VAT__c != &quot;&quot;,
Tax_ID__c = &quot;&quot;
),
&quot;VAT: &quot;&amp;VAT__c,&quot;&quot;)+

IF(
AND(
VAT__c != &quot;&quot;,
Tax_ID__c != &quot;&quot;
)
,BR()&amp;&quot;VAT: &quot;&amp;VAT__c,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax ID / VAT</label>
    <type>Text</type>
</CustomField>