force-app/main/default/objects/Account/fields/TransactionalData__c.field-meta.xml
<CustomField>
    <fullName>TransactionalData__c</fullName>
    <label>Transactional Data</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>