force-app/main/default/objects/Account/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <length>20</length>
    <type>Text</type>
</CustomField>