force-app/main/default/objects/Account/recordTypes/N_Competitor.recordType-meta.xml
<RecordType>
    <fullName>N_Competitor</fullName>
    <active>true</active>
    <label>Competitor</label>
</RecordType>