force-app/main/default/objects/Account/recordTypes/N_Customer.recordType-meta.xml
<RecordType>
    <fullName>N_Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>