force-app/main/default/objects/Account/recordTypes/N_Distributor.recordType-meta.xml
<RecordType>
    <fullName>N_Distributor</fullName>
    <active>true</active>
    <label>Distributor</label>
</RecordType>