force-app/main/default/objects/Account/recordTypes/N_Partner.recordType-meta.xml
<RecordType>
    <fullName>N_Partner</fullName>
    <active>true</active>
    <label>Partner</label>
</RecordType>