force-app/main/default/objects/Account/recordTypes/N_Prospect.recordType-meta.xml
<RecordType>
    <fullName>N_Prospect</fullName>
    <active>true</active>
    <label>Prospect</label>
</RecordType>