force-app/main/default/objects/Account/validationRules/Billing_city_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_city_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( BillingCity)</errorConditionFormula>
    <errorMessage>Billing City can&apos;t be blank</errorMessage>
</ValidationRule>