force-app/main/default/objects/Account/validationRules/Billing_Country_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Country_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(BillingCountry)</errorConditionFormula>
    <errorMessage>Billing Country can&apos;t be blank</errorMessage>
</ValidationRule>