force-app/main/default/objects/Account/validationRules/Billing_State_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_State_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( BillingState)</errorConditionFormula>
    <errorMessage>Billing State can&apos;t be blank</errorMessage>
</ValidationRule>