force-app/main/default/objects/Account/validationRules/Billing_State_Province_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_State_Province_cannot_be_blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(

OR(

Contains(  BillingCountry  , &quot;Australia&quot;),

Contains(BillingCountry , &quot;Brazil&quot;),

Contains(BillingCountry , &quot;Canada&quot;),

Contains(BillingCountry , &quot;China&quot;),

Contains(BillingCountry , &quot;Ireland&quot;),

Contains(BillingCountry , &quot;India&quot;),

Contains(BillingCountry , &quot;Italy&quot;),

Contains(BillingCountry , &quot;Mexico&quot;),

Contains(BillingCountry , &quot;United States&quot;)),

ISBLANK(  BillingState  ))</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>Please fill in the Billing State/Province.</errorMessage>
</ValidationRule>