force-app/main/default/objects/Account/validationRules/Billing_street_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_street_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(BillingStreet)</errorConditionFormula>
    <errorMessage>Billing Street can&apos;t be blank</errorMessage>
</ValidationRule>