force-app/main/default/objects/Account/validationRules/Billing_Zip_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Zip_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( BillingPostalCode )</errorConditionFormula>
    <errorMessage>Billing Zip can&apos;t be blank</errorMessage>
</ValidationRule>