force-app/main/default/objects/Account/validationRules/Canada_Billing_Zip_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Canada_Billing_Zip_Code_Validation</fullName>
    <active>false</active>
    <description>Validates that the account Billing Zip/Postal Code is in the correct format if Billing Country is Canada.</description>
    <errorConditionFormula>AND(
OR(  BillingCountry   = &quot;CAN&quot;,  BillingCountry  = &quot;CA&quot;,  BillingCountry  = &quot;Canada&quot;),
NOT(REGEX(  BillingPostalCode  , &quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;))
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Canadian postal code must be in A9A 9A9 format.</errorMessage>
</ValidationRule>