force-app/main/default/objects/Account/validationRules/Customer_Account_S_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Account_S_Address</fullName>
    <active>true</active>
    <errorConditionFormula>OR(


AND(
RecordType.Name = &quot;Customer&quot;,
ShippingCountry &lt;&gt; &quot;Ireland&quot;,

OR(
ISBLANK(ShippingCity ),
ISBLANK(ShippingStreet ),
ISBLANK(ShippingPostalCode),
ISBLANK (ShippingCountry ))),

AND(
RecordType.Name = &quot;Customer&quot;,
ShippingCountry = &quot;Ireland&quot;,
OR(
ISBLANK(ShippingCity ),
ISBLANK(ShippingStreet )))
)</errorConditionFormula>
    <errorDisplayField>ShippingCountry</errorDisplayField>
    <errorMessage>Please fill out the &apos;Shipping Address&apos;</errorMessage>
</ValidationRule>