force-app/main/default/objects/Account/validationRules/Distributor_Account_B_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Distributor_Account_B_Address</fullName>
    <active>true</active>
    <errorConditionFormula>OR(


AND(
RecordType.Name = &quot;Distributor&quot;,
BillingCountry &lt;&gt; &quot;Ireland&quot;,

OR(
ISBLANK( BillingCity ),
ISBLANK( BillingStreet ),
ISBLANK( BillingPostalCode),
ISBLANK( BillingCountry ))),

AND(
RecordType.Name = &quot;Distributor&quot;,
BillingCountry = &quot;Ireland&quot;,
OR(
ISBLANK( BillingCity ),
ISBLANK( BillingStreet )))
)</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>Please fill out the &apos;Billing Address&apos;</errorMessage>
</ValidationRule>