force-app/main/default/objects/Account/validationRules/Market_Value_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Market_Value_Change</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED( Market__c),
    PRIORVALUE(Market__c) &lt;&gt; &apos;&apos;,
    ($Profile.Name &lt;&gt; &quot;System Administrator&quot;),
    ($User.Username &lt;&gt;&apos;informatica@flexcon.com&apos;)
)</errorConditionFormula>
    <errorMessage>Only Admin Can change Market Value</errorMessage>
</ValidationRule>