force-app/main/default/objects/Account/validationRules/Partner_Account_to_Secondary_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Account_to_Secondary_Type</fullName>
    <active>false</active>
    <description>When the Account Record Type field reads &quot;Partner&quot; make the Secondary Type 1 field required.</description>
    <errorConditionFormula>AND($RecordType.Name =&quot;Partner Account&quot;,
ISBLANK (TEXT(Secondarytype1__c)))</errorConditionFormula>
    <errorMessage>Secondary Type 1 is required when Account Record Type = Partner</errorMessage>
</ValidationRule>