force-app/main/default/objects/Account/validationRules/Picklist_Validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_Validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
 AND(
 OR(
 Contains(BillingCountry, &quot;Australia&quot;),
 Contains(BillingCountry, &quot;Brazil&quot;),
 Contains(BillingCountry, &quot;Canada&quot;),
 Contains(BillingCountry, &quot;China&quot;),
 Contains(BillingCountry, &quot;Ireland&quot;),
 Contains(BillingCountry, &quot;India&quot;),
 Contains(BillingCountry, &quot;Italy&quot;),
 Contains(BillingCountry, &quot;Mexico&quot;),
 Contains(BillingCountry, &quot;United States&quot;)),
 ISBLANK( BillingState )),



 AND(
 OR(
 Contains( ShippingCountry , &quot;Australia&quot;),
 Contains(ShippingCountry , &quot;Brazil&quot;),
 Contains(ShippingCountry , &quot;Canada&quot;),
 Contains(ShippingCountry , &quot;China&quot;),
 Contains(ShippingCountry , &quot;Ireland&quot;),
 Contains(ShippingCountry , &quot;India&quot;),
 Contains(ShippingCountry , &quot;Italy&quot;),
 Contains(ShippingCountry , &quot;Mexico&quot;),
 Contains(ShippingCountry , &quot;United States&quot;)),
ISBLANK( ShippingState))
)</errorConditionFormula>
    <errorMessage>Please select the correct shipping or billing state/province.</errorMessage>
</ValidationRule>