force-app/main/default/objects/Account/validationRules/Primary_Type_on_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Primary_Type_on_Account</fullName>
    <active>false</active>
    <errorConditionFormula>TEXT(PrimaryType__c) = &apos;&apos;</errorConditionFormula>
    <errorMessage>Please Enter value on &quot;Primary Type&quot; field.</errorMessage>
</ValidationRule>