force-app/main/default/objects/Account/validationRules/PrimaryVerticalMarket_CustomerEnforce.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryVerticalMarket_CustomerEnforce</fullName>
    <active>true</active>
    <description>If Customer is selected, Primary Vertical Market is required.</description>
    <errorConditionFormula>AND(
RecordTypeId = &quot;012f2000000Kntc&quot;, ISBLANK(TEXT( Primary_Vertical_Market__c)))</errorConditionFormula>
    <errorDisplayField>Primary_Vertical_Market__c</errorDisplayField>
    <errorMessage>Please fill out the &apos;Primary Vertical Market&apos; field.</errorMessage>
</ValidationRule>