force-app/main/default/objects/Account/validationRules/PrimaryVerticalMarket_DistributorEnforce.validationRule-meta.xml
<ValidationRule>
    <fullName>PrimaryVerticalMarket_DistributorEnforce</fullName>
    <active>true</active>
    <description>If Distributor selected, Primary Vertical Market is required.</description>
    <errorConditionFormula>AND(
RecordTypeId = &quot;0125w000000n2Z0&quot;, ISBLANK(TEXT( Primary_Vertical_Market__c)))</errorConditionFormula>
    <errorDisplayField>Primary_Vertical_Market__c</errorDisplayField>
    <errorMessage>Please fill out the &apos;Primary Vertical Market&apos; field.</errorMessage>
</ValidationRule>