force-app/main/default/objects/Account/validationRules/Shiping_street_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Shiping_street_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(ShippingStreet)</errorConditionFormula>
    <errorMessage>Shipping Street can&apos;t be blank</errorMessage>
</ValidationRule>