force-app/main/default/objects/Account/validationRules/Shipping_city_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_city_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( ShippingCity)</errorConditionFormula>
    <errorMessage>Shipping City can&apos;t be blank</errorMessage>
</ValidationRule>