force-app/main/default/objects/Account/validationRules/Shipping_Country_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Country_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(ShippingCountry)</errorConditionFormula>
    <errorMessage>Shipping Country can&apos;t be blank</errorMessage>
</ValidationRule>