force-app/main/default/objects/Account/validationRules/Shipping_State_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_State_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(ShippingState)</errorConditionFormula>
    <errorMessage>Shipping State can&apos;t be blank</errorMessage>
</ValidationRule>