force-app/main/default/objects/Account/validationRules/Shipping_Zip_cannot_be_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Shipping_Zip_cannot_be_Blank</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(ShippingPostalCode )</errorConditionFormula>
    <errorMessage>Shipping Zip can&apos;t be blank</errorMessage>
</ValidationRule>