force-app/main/default/objects/Account/validationRules/US_Billing_Zip_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Billing_Zip_Code_Validation</fullName>
    <active>false</active>
    <description>Validates that the account Billing Zip/Postal Code is in 99999 or 99999-9999 format if Billing Country is USA or US or United States.</description>
    <errorConditionFormula>AND(
OR( BillingCountry  = &quot;USA&quot;,  BillingCountry  = &quot;US&quot;,  BillingCountry  = &quot;United States&quot;),
NOT(REGEX( BillingPostalCode , &quot;\\d{5}(-\\d{4})?&quot;))
)</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
</ValidationRule>